== master

* Fix original ActiveRecord::Observer#update not being used for non-state_machine callbacks [Jeremy Wells]
* Add support for ActiveRecord 3.0
* Fix without_{name} scopes not quoting columns in ActiveRecord [Jon Evans]
* Fix without_{name} scopes not scoping columns to the table in ActiveRecord and Sequel [Jon Evans]
* Fix custom state attributes not being marked properly as changed in ActiveRecord
* Fix tracked attributes changes in ActiveRecord / DataMapper integrations not working correctly for non-loopbacks [Joe Lind]
* Fix plural scope names being incorrect for DataMapper 0.9.4 - 0.9.6
* Fix deprecation warnings for ruby-graphviz 0.9.0+
* Add support for ActiveRecord 2.0.*
* Fix nil states being overwritten when they're explicitly set in ORM integrations
* Fix default states not getting set in ORM integrations if the column has a default
* Fix event transitions being kept around while running actions/callbacks, sometimes preventing object marshalling

== 0.8.0 / 2009-08-15

* Add support for DataMapper 0.10.0
* Always interpet nil return values from actions as failed attempts
* Fix loopbacks not causing records to save in ORM integrations if no other fields were changed
* Fix events not failing with useful errors when an object's state is invalid
* Use more friendly NoMethodError messages for state-driven behaviors
* Fix before_transition callbacks getting run twice when using event attributes in ORM integrations
* Add the ability to query for the availability of specific transitions on an object
* Allow after_transition callbacks to be explicitly run on failed attempts
* By default, don't run after_transition callbacks on failed attempts
* Fix not allowing multiple methods to be specified as arguments in callbacks
* Fix initial states being set when loading records from the database in Sequel integration
* Allow static initial states to be set earlier in the initialization of an object
* Use friendly validation errors for nil states